# qeyes

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  README.zh-CN.md  common.h  compile_commands.json  cursorpostionmonitor.cpp  cursorpostionmonitor.h  main.cpp  qeyes.cpp  qeyes.h
dde-dock-qeyes-plugin/: CMakeLists.txt  qeyes-plugin.cpp  qeyes-plugin.h  qeyes-plugin.json
src/: CMakeLists.txt  EyesTrayIcon.cpp  EyesTrayIcon.h  main.cpp
